--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  line-height: 1.6;
+  background-color: #f8f9fa;
+}
 
 .blink {
   animation: blink-animation-text 1s steps(5, start) infinite;
@@ -11,23 +22,11 @@
     transform: scale(1.2);
   }
 }
-@-webkit-keyframes blink-animation {
+/* @-webkit-keyframes blink-animation {
   to {
     visibility: hidden;
   }
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-body {
-  line-height: 1.6;
-  background-color: #f8f9fa;
-  
-}
+} */
 
 .navbar ul li a.active {
   position: relative;
@@ -35,7 +34,7 @@ body {
 }
 
 .navbar ul li a.active::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   right: 0;
@@ -43,8 +42,6 @@ body {
   height: 2px;
   background-color: #ffeba7;
 }
-
-
 
 .navbar {
   display: flex;
@@ -69,7 +66,6 @@ body {
   border-radius: 5px;
   font-size: 13px;
   transition: background-color 0.3s, transform 0.3s;
-
 }
 
 .navbar ul li a:hover {
@@ -165,6 +161,32 @@ body {
   background-color: #03b2b5;
 }
 
+
+.marquee {
+  line-height: 50px;
+  color: white;
+  white-space: nowrap;
+  overflow: hidden;
+  box-sizing: border-box;
+  margin-left: 286px;
+  margin-right: 260px;
+}
+.marquee p {
+  display: inline-block;
+  padding-left: 100%;
+  font-weight: bold;
+  color: #1c2b65;
+  animation: marquee 15s linear infinite;
+}
+@keyframes marquee {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
+}
+/* 
 .scrolling-text-container {
   overflow: hidden;
   white-space: nowrap;
@@ -181,7 +203,7 @@ body {
   animation: scrollText 10s linear infinite;
 }
 
-/* Keyframes for the scrolling effect */
+/* Keyframes for the scrolling effect 
 @keyframes scrollText {
   0% {
     transform: translateX(70%);
@@ -189,13 +211,15 @@ body {
   100% {
     transform: translateX(20%);
   }
-}
+} */
+
 .menu-bar {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 5px;
   border-radius: 25px;
+  flex-wrap: wrap;
 }
 
 .menu-item {
@@ -264,6 +288,27 @@ body {
   padding: 40px;
 }
 
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: rgb(150, 143, 143);
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background: linear-gradient(45deg, #1c2b65, #03b2b5);
+}
+
 .carousel-container {
   width: 80%;
   max-width: 1200px;
@@ -292,7 +337,7 @@ body {
   gap: 10px;
 }
 
-.arrow{
+.arrow {
   width: 30px;
   height: 30px;
   display: flex;
@@ -329,6 +374,7 @@ body {
   overflow: hidden;
   justify-content: center; /* Center align cards */
   padding: 20px; /* Added padding for cleaner look */
+  flex-wrap: wrap;
 }
 
 .news-card {
@@ -350,7 +396,6 @@ body {
   width: 100%;
   height: 200px;
   object-fit: cover;
-  
 }
 
 .news-content {
@@ -407,6 +452,10 @@ body {
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   position: relative;
+  width: 100%;
+  max-width: 650px; /* Maximum width */
+  min-width: 300px; /* Minimum width */
+  height: auto;
 }
 
 .image-container img:hover {
@@ -681,6 +730,20 @@ body {
   font-size: 13px;
 }
 
+
+.ad-section {
+  position: relative;
+  width: 100%;
+  height: 75%;
+  display: flex;
+  justify-content: center;
+}
+
+.ad-section img {
+  border-radius: 10px;
+}
+
+
 .locate-us-section {
   /* margin: auto auto 50px auto; */
   /* padding: 20px; */
@@ -709,7 +772,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
   overflow: hidden;
-width: 117%;
+  width: 117%;
 }
 
 .map-header {
@@ -755,7 +818,6 @@ width: 117%;
   font-size: 18px;
 }
 
-
 .business-partner-heading {
   font-size: 18px;
   font-weight: 600;
@@ -766,30 +828,6 @@ width: 117%;
   top: 20px;
 }
 
-.marquee {
-  line-height: 50px;
-  color: white;
-  white-space: nowrap;
-  overflow: hidden;
-  box-sizing: border-box;
-  margin-left: 286px;
-  margin-right: 260px;
-}
-.marquee p {
-  display: inline-block;
-  padding-left: 100%;
-  font-weight: bold;
-  color: #1c2b65;
-  animation: marquee 15s linear infinite;
-}
-@keyframes marquee {
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(-100%, 0);
-  }
-}
 
 .scroll-button {
   position: absolute;
@@ -830,11 +868,9 @@ width: 117%;
   display: flex;
   width: calc(250px * 36);
   animation: scroll 40s linear infinite;
-
 }
 .slide-track:hover {
   animation-play-state: paused;
-
 }
 
 @keyframes scroll {
@@ -842,11 +878,9 @@ width: 117%;
     transform: translateX(0);
   }
   100% {
-    transform: translateX(calc(-250px*9));
+    transform: translateX(calc(-250px * 9));
   }
-} 
-
-
+}
 
 .slide-img {
   height: 100px;
@@ -859,20 +893,24 @@ width: 117%;
 
 .slide-img img {
   width: 100%;
-transition: transform 1%
+  transition: transform 1%;
 }
 
 .slide-img img:hover {
   transform: translateZ(20px);
-  border: 2px solid  rgba(3, 178, 181, 0.3);
+  border: 2px solid rgba(3, 178, 181, 0.3);
   border-radius: 25px;
 }
 
 .slider-image::before,
 .slider-image::after {
-  background: linear-gradient(to right, rgba(255, 255, 255, 1)0%, rgba(255, 255, 255, 0)100%);
-  
-  content: '';
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
+
+  content: "";
   height: 100%;
   position: absolute;
   width: 15%;
@@ -966,7 +1004,6 @@ transition: transform 1%
 .investor-box-container .info-card {
   width: 45%;
 }
-
 
 .footer {
   background: linear-gradient(45deg, #1c2b65, #03b2b5);
@@ -1086,29 +1123,136 @@ transition: transform 1%
   font-size: 14px;
   color: #ffffff;
 }
-.ad-section {
-  position: relative;
+/* Responsive Design */
+@media (max-width: 768px) {
+  .investor-box-container .info-card {
+    width: 100%;
+  }
+}
+
+/* Responsive Design */
+@media (max-width: 360px) {
+  .slider-container {
+    height: 170px;
+    border-radius: 10px;
+}
+.image-container {
+  flex-direction: column;
+  padding: 20px;
+}
+.image-container img {
+  margin-top: 12px;
+  /* width: auto; */
   width: 100%;
-  height: 75%;
-  display: flex;
-  justify-content: center;
+  max-width: auto; /* Maximum width */
+  min-width: 0px; /* Minimum width */
+}
+.menu-bar {
+flex-wrap: wrap;
+}
+
+.menu-item {
+  margin: 3px 20px;
+}
+
+.menu-item img {
+  width: 42px;
+  height: 42px;
+
+}
+.news-card-mobile{
+  display: none !important;
+}
+
+/* .card-3d-wrap {
+  position: relative;
+  width: 340px;
+  max-width: calc(100% - 20px);
+   height: 500px; 
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  margin-top: 39px;
+} */
+.ad-section {
+  margin-top: 205px;
+}
+
+.carousel-header{
+  flex-direction: column;
+}
+.carousel-wrapper {
+  gap: 12px;
+  padding: 0px;
+  flex-wrap: wrap;
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 2px;
+  z-index: 99;
+  font-size: 22px;
+  background-color: unset;
+  color: #242121;
+  padding: 0px;
+  border-radius: 4px;
+}
+.map-card {
+  width: auto;
+  margin: 139px 5px 0 5px;
+}
+.slide-img img {
+  width: 80%;
+}
+
+.focal-person-info h3, .focal-person-investor h3 {
+  font-size: 11px;
+  margin: 10px 10px 20px 10px;
+}
+.focal-persons-section {
+  margin: -32px 22px;
+  padding: 0px;
+}
+.card-header {
+  padding: 15px 20px;
+  font-size: 15px;
+}
+.card-body p {
+  font-size: 13px;
+  margin: 10px 0;
+}
+
+.footer-section p {
+  margin: 13px 0px;
+  font-size: 10.5px;
+  line-height: 17px;
+}
+.footer-section {
+  width: auto;
+  margin: 25px 27px -3px 27px;
+}
+.footer-content {
+  justify-content: flex-start;
+}
+.footer-section ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 10.5px;
+}
+.footer-logo {
+  width: 27px;
+  /* height: auto; */
+}
+.footer-logo-box p {
+
+  font-size: small;
+}
+.footer-logo-box {
+
+  width: 86px;
+}
+
 
 }
 
-.ad-section img{
-  border-radius: 10px;  
-}
-  /* Responsive Design */
-  @media (max-width: 768px) {
-    .investor-box-container .info-card {
-      width: 100%;
-    }
-  }
-  
-  
-  /* Responsive Design */
-  @media (max-width: 768px) {
-    .investor-box-container .info-card {
-      width: 100%;
-    }
-  }
