--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     transform: scale(1.2);
   }
 }
-
+/* 
 .navbar ul li a.active {
   position: relative;
   color: #ffeba7;
@@ -66,7 +66,7 @@ body {
   background-color: #ffeba7;
   color: #1c2b65;
   transform: scale(1.1);
-}
+} */
 /* .submenu li a {
   color: black;
   font-size: 12px;
@@ -76,7 +76,7 @@ body {
 .submenu li a:hover {
   background-color: #f0f0f0;
 } */
-
+/* 
 .logo-container {
   display: flex;
   align-items: center;
@@ -98,13 +98,98 @@ body {
 
 .logo-text h1 {
   font-size: 12px;
-  display: block;
+  display: block;    
 }
 
 .logo-text span:first-child {
   font-weight: bold;
 }
+/* Submenu Styles 
 
+.navbar ul li .submenu {
+  /* min-width: 250px; 
+  width: max-content;
+  display: none;
+  position: absolute;
+  top: 119%;
+  left: 0;
+  z-index: 10;
+  background: linear-gradient(45deg, #1c2b65, #03b2b5);
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  line-height: 0.5;
+  opacity: 0.9;
+}
+.navbar ul li:hover .submenu {
+  display: block;
+}
+
+/* Main Submenu (when hovering over About Us) 
+.submenu {
+  display: none; /* Initially hidden 
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 10;
+  background: linear-gradient(45deg, #1c2b65, #03b2b5);
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  opacity: 0.95;
+}
+.submenu li a {
+  display: block;
+  color: #1c2b65;
+  font-size: 10px;
+  padding: 8px 12px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+.navbar ul li .submenu {
+    /* min-width: 250px; 
+    width: max-content;
+    display: none;
+    position: absolute;
+    top: 119%;
+    left: 0;
+    z-index: 10;
+    background: linear-gradient(45deg, #1c2b65, #03b2b5);
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    line-height: 0.5;
+    opacity: 0.9;
+}
+
+/* Submenu3 (for Board of Directors) 
+.submenu3 {
+  display: none; /* Initially hidden 
+  position: absolute;
+  left: 100%;
+  top: 0;
+  z-index: 11;
+  background: linear-gradient(45deg, #1c2b65, #03b2b5);
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  opacity: 0.95;
+}
+
+/* Show submenu3 when hovering over Board of Directors 
+li.group:hover > .submenu3 {
+  display: block;
+}
+/* Submenu3 Links 
+.navbar ul li .submenu3 li a {
+  display: block;
+  color: #1c2b65;
+  font-size: 12px;
+  padding: 8px 12px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.navbar ul li .submenu3 li a:hover {
+  background-color: #ffeba7;
+  color: #1c2b65;
+} */
 
 .slider-container {
   width: 100%;
@@ -340,7 +425,7 @@ body {
   gap: 10px;
 }
 
-.arrow {
+.news-arrow {
   width: 30px;
   height: 30px;
   display: flex;
@@ -354,7 +439,7 @@ body {
   transition: background-color 0.3s ease;
 }
 
-.arrow:hover {
+.news-arrow:hover {
   background-color: #1c2b65;
   color: #fff;
 }
@@ -1132,9 +1217,9 @@ body {
 }
 
 /* Responsive Design */
-@media (max-width: 400px) {
+@media (max-width: 450px) {
   main {
-    margin-top: 90px !important;
+    margin-top: 100px !important;
   }
   .slider-container {
     height: 170px;
@@ -1377,32 +1462,465 @@ header div{
 .mobile-hide{
   display: none;
 }
+
+.marquee{
+  overflow: visible;
+}
+.marquee p {
+  animation: marquee 4s linear infinite;
+}
+}
+
+
+
+
 .logo-text {
+  font-size: x-small;
+  color: white;
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  height: 70px;
+  background: linear-gradient(45deg, #1c2b65, #03b2b5);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  z-index: 99;
+}
+
+nav .navbar {
+  height: 100%;
+  /* max-width: 1250px; */
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+  /* background: red; */
+  padding: 0 50px;
+}
+
+.navbar .logo a {
+  font-size: 30px;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+nav .navbar .nav-links {
+  line-height: 70px;
+  height: 100%;
+  /* overflow-y: auto; Enable vertical scrolling */
+}
+
+nav .navbar .links {
+  display: flex;
+}
+
+nav .navbar .links li {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0 10px;
+}
+
+nav .navbar .links li a {
+  height: 100%;
+  text-decoration: none;
+  white-space: nowrap;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.links li:hover .htmlcss-arrow,
+.links li:hover .js-arrow,
+.links li:hover .htmlcss-arrow2,
+.links li:hover .htmlcss-arrow3,
+.links li:hover .htmlcss-arrow4,
+.links li:hover .htmlcss-arrow5,
+.links li:hover .htmlcss-arrow6,
+.links li:hover .htmlcss-arrow7,
+.links li:hover .htmlcss-arrow8 {
+  transform: rotate(180deg);
+}
+
+nav .navbar .links li .arrow {
+  /* background: red; */
+  height: 100%;
+  width: 22px;
+  line-height: 70px;
+  text-align: center;
+  display: inline-block;
+  color: #fff;
+  transition: all 0.3s ease;
+}
+
+nav .navbar .links li .sub-menu {
+  position: absolute;
+  top: 70px;
+  left: 0;
+  line-height: 40px;
+  background: #03b2b5;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 4px 4px;
+  display: none;
+  z-index: 2;
+}
+
+nav .navbar .links li:hover .htmlCss-sub-menu,
+nav .navbar .links li:hover .js-sub-menu,
+nav .navbar .links li:hover .htmlCss-sub-menu2,
+nav .navbar .links li:hover .htmlCss-sub-menu3,
+nav .navbar .links li:hover .htmlCss-sub-menu4,
+nav .navbar .links li:hover .htmlCss-sub-menu5,
+nav .navbar .links li:hover .htmlCss-sub-menu6,
+nav .navbar .links li:hover .htmlCss-sub-menu7,
+nav .navbar .links li:hover .htmlCss-sub-menu8 {
+  display: block;
+}
+
+.navbar .links li .sub-menu li {
+  padding: 0 22px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.navbar .links li .sub-menu a {
+  color: #fff;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.navbar .links li .sub-menu .more-arrow,
+.navbar .links li .sub-menu .more-arrow1,
+.navbar .links li .sub-menu .more-arrow2,
+.navbar .links li .sub-menu .more-arrow3,
+.navbar .links li .sub-menu .more-arrow4,
+.navbar .links li .sub-menu .more-arrow5,
+.navbar .links li .sub-menu .more-arrow6,
+.navbar .links li .sub-menu .more-arrow7,
+.navbar .links li .sub-menu .more-arrow8 {
+  line-height: 40px;
+}
+
+.navbar .links li .sub-menu .more-sub-menu,
+.navbar .links li .sub-menu .more-sub-menu1,
+.navbar .links li .sub-menu .more-sub-menu2,
+.navbar .links li .sub-menu .more-sub-menu3,
+.navbar .links li .sub-menu .more-sub-menu4,
+.navbar .links li .sub-menu .more-sub-menu5,
+.navbar .links li .sub-menu .more-sub-menu6,
+.navbar .links li .sub-menu .more-sub-menu7,
+.navbar .links li .sub-menu .more-sub-menu8 {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  border-radius: 0 4px 4px 4px;
+  z-index: 1;
   display: none;
 }
 
-.navbar ul {
-  flex-direction: column;
-  /* background-color: #1c2b65; */
-  position: absolute;
-  top: 60px;
-  left: 145px;
-  width: 58%;
-  /* padding: 10px 0; */
-  background: linear-gradient(45deg, #1c2b65, #03b2b5);
-  /* padding: 30px 0; */
-  border-radius: 5px;
-}
-.navbar ul li {
-  text-align: center;
-  padding: 5px 0;
-}
-.navbar ul li a {
-  font-size: 10px;
- 
-}
-#menu-btn{
-  order: 4;
+.links li .sub-menu .more:hover .more-sub-menu,
+.links li .sub-menu .more:hover .more-sub-menu1,
+.links li .sub-menu .more:hover .more-sub-menu2,
+.links li .sub-menu .more:hover .more-sub-menu3,
+.links li .sub-menu .more:hover .more-sub-menu4,
+.links li .sub-menu .more:hover .more-sub-menu5,
+.links li .sub-menu .more:hover .more-sub-menu6,
+.links li .sub-menu .more:hover .more-sub-menu7,
+.links li .sub-menu .more:hover .more-sub-menu8 {
+  display: block;
 }
 
+.navbar .search-box {
+  position: relative;
+  height: 40px;
+  width: 40px;
+}
+
+.navbar .search-box i {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  line-height: 40px;
+  text-align: center;
+  font-size: 22px;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.navbar .search-box .input-box {
+  position: absolute;
+  right: calc(100% - 40px);
+  top: 80px;
+  height: 60px;
+  width: 300px;
+  background: #03b2b5;
+  border-radius: 6px;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.4s ease;
+}
+
+.navbar.showInput .search-box .input-box {
+  top: 65px;
+  opacity: 1;
+  pointer-events: auto;
+  background: #03b2b5;
+}
+
+.search-box .input-box::before {
+  content: "";
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  background: #03b2b5;
+  right: 10px;
+  top: -6px;
+  transform: rotate(45deg);
+}
+
+.search-box .input-box input {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 4px;
+  transform: translate(-50%, -50%);
+  height: 35px;
+  width: 280px;
+  outline: none;
+  padding: 0 15px;
+  font-size: 16px;
+  border: none;
+}
+
+.navbar .nav-links .sidebar-logo {
+  display: none;
+}
+
+.navbar .bx-menu {
+  display: none;
+}
+
+@media (max-width: 920px) {
+  nav .navbar {
+    max-width: 100%;
+    padding: 0 25px;
+  }
+
+  nav .navbar .logo a {
+    font-size: 27px;
+  }
+
+  nav .navbar .links li {
+    padding: 0 10px;
+    white-space: nowrap;
+  }
+
+  nav .navbar .links li a {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 800px) {
+  .navbar .bx-menu {
+    display: block;
+  }
+
+  nav .navbar .nav-links {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    display: block;
+    max-width: 270px;
+    width: 100%;
+    background: #03b2b5;
+    line-height: 40px;
+    padding: 20px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    transition: all 0.5s ease;
+    z-index: 1000;
+    overflow-y: auto; /* Enable vertical scrolling */
+  }
+
+  .navbar .nav-links .sidebar-logo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .sidebar-logo .logo-name {
+    font-size: 25px;
+    color: #fff;
+  }
+
+  .sidebar-logo i,
+  .navbar .bx-menu {
+    font-size: 25px;
+    color: #fff;
+  }
+
+  nav .navbar .links {
+    display: block;
+    margin-top: 20px;
+  }
+
+  nav .navbar .links li .arrow {
+    line-height: 40px;
+  }
+
+  nav .navbar .links li {
+    display: block;
+  }
+
+  nav .navbar .links li .sub-menu {
+    position: relative;
+    top: 0;
+    box-shadow: none;
+    display: none;
+  }
+
+  nav .navbar .links li .sub-menu li {
+    border-bottom: none;
+  }
+
+  .navbar .links li .sub-menu .more-sub-menu,
+  .navbar .links li .sub-menu .more-sub-menu1,
+  .navbar .links li .sub-menu .more-sub-menu2,
+  .navbar .links li .sub-menu .more-sub-menu3,
+  .navbar .links li .sub-menu .more-sub-menu4,
+  .navbar .links li .sub-menu .more-sub-menu5,
+  .navbar .links li .sub-menu .more-sub-menu6,
+  .navbar .links li .sub-menu .more-sub-menu7,
+  .navbar .links li .sub-menu .more-sub-menu8 {
+    display: none;
+    position: relative;
+    left: 0;
+  }
+
+  .navbar .links li .sub-menu .more-sub-menu li,
+  .navbar .links li .sub-menu .more-sub-menu1 li,
+  .navbar .links li .sub-menu .more-sub-menu2 li,
+  .navbar .links li .sub-menu .more-sub-menu3 li,
+  .navbar .links li .sub-menu .more-sub-menu4 li,
+  .navbar .links li .sub-menu .more-sub-menu5 li,
+  .navbar .links li .sub-menu .more-sub-menu6 li,
+  .navbar .links li .sub-menu .more-sub-menu7 li,
+  .navbar .links li .sub-menu .more-sub-menu8 i {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .links li:hover .htmlcss-arrow,
+  .links li:hover .js-arrow,
+  .links li:hover .htmlcss-arrow2,
+  .links li:hover .htmlcss-arrow3,
+  .links li:hover .htmlcss-arrow4,
+  .links li:hover .htmlcss-arrow5,
+  .links li:hover .htmlcss-arrow6,
+  .links li:hover .htmlcss-arrow7,
+  .links li:hover .htmlcss-arrow8 {
+    transform: rotate(0deg);
+  }
+
+  .navbar .links li .sub-menu .more-sub-menu,
+  .navbar .links li .sub-menu .more-sub-menu1,
+  .navbar .links li .sub-menu .more-sub-menu2,
+  .navbar .links li .sub-menu .more-sub-menu3,
+  .navbar .links li .sub-menu .more-sub-menu4,
+  .navbar .links li .sub-menu .more-sub-menu5,
+  .navbar .links li .sub-menu .more-sub-menu6,
+  .navbar .links li .sub-menu .more-sub-menu7,
+  .navbar .links li .sub-menu .more-sub-menu8 {
+    display: none;
+  }
+
+  .navbar .links li .sub-menu .more span {
+    /* background: red; */
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+  }
+
+  .links li .sub-menu .more:hover .more-sub-menu,
+  .links li .sub-menu .more:hover .more-sub-menu1,
+  .links li .sub-menu .more:hover .more-sub-menu2,
+  .links li .sub-menu .more:hover .more-sub-menu3,
+  .links li .sub-menu .more:hover .more-sub-menu4,
+  .links li .sub-menu .more:hover .more-sub-menu5,
+  .links li .sub-menu .more:hover .more-sub-menu6,
+  .links li .sub-menu .more:hover .more-sub-menu7,
+  .links li .sub-menu .more:hover .more-sub-menu8 {
+    display: none;
+  }
+
+  nav .navbar .links li:hover .htmlCss-sub-menu,
+  nav .navbar .links li:hover .js-sub-menu,
+  nav .navbar .links li:hover .htmlCss-sub-menu2,
+  nav .navbar .links li:hover .htmlCss-sub-menu3,
+  nav .navbar .links li:hover .htmlCss-sub-menu4,
+  nav .navbar .links li:hover .htmlCss-sub-menu5,
+  nav .navbar .links li:hover .htmlCss-sub-menu6,
+  nav .navbar .links li:hover .htmlCss-sub-menu7,
+  nav .navbar .links li:hover .htmlCss-sub-menu8 {
+    display: none;
+  }
+
+  .navbar .nav-links.show1 .links .htmlcss-arrow,
+  .navbar .nav-links.show3 .links .js-arrow,
+  .navbar .nav-links.show4 .links .htmlcss-arrow2,
+  .navbar .nav-links.show5 .links .htmlcss-arrow3,
+  .navbar .nav-links.show6 .links .htmlcss-arrow4,
+  .navbar .nav-links.show7 .links .htmlcss-arrow5,
+  .navbar .nav-links.show8 .links .htmlcss-arrow6,
+  .navbar .nav-links.show9 .links .htmlcss-arrow7,
+  .navbar .nav-links.show10 .links .htmlcss-arrow8 {
+    transform: rotate(180deg);
+  }
+  .navbar .nav-links.show1 .links .htmlCss-sub-menu,
+  .navbar .nav-links.show3 .links .js-sub-menu,
+  .navbar .nav-links.show4 .links .htmlCss-sub-menu2,
+  .navbar .nav-links.show5 .links .htmlCss-sub-menu3,
+  .navbar .nav-links.show6 .links .htmlCss-sub-menu4,
+  .navbar .nav-links.show7 .links .htmlCss-sub-menu5,
+  .navbar .nav-links.show8 .links .htmlCss-sub-menu6,
+  .navbar .nav-links.show9 .links .htmlCss-sub-menu7,
+  .navbar .nav-links.show10 .links .htmlCss-sub-menu8,
+  .navbar .nav-links.view1 .links .more .more-sub-menu,
+  .navbar .nav-links.view2 .links .more .more-sub-menu1,
+  .navbar .nav-links.view3 .links .more .more-sub-menu2,
+  .navbar .nav-links.view4 .links .more .more-sub-menu3,
+  .navbar .nav-links.view5 .links .more .more-sub-menu4,
+  .navbar .nav-links.view6 .links .more .more-sub-menu5,
+  .navbar .nav-links.view7 .links .more .more-sub-menu6,
+  .navbar .nav-links.view8 .links .more .more-sub-menu7,
+  .navbar .nav-links.view9 .links .more .more-sub-menu8 {
+    display: block;
+  }
+
+  .navbar .nav-links.view1 .links .more-arrow,
+  .navbar .nav-links.view2 .links .more-arrow1,
+  .navbar .nav-links.view3 .links .more-arrow2,
+  .navbar .nav-links.view4 .links .more-arrow3,
+  .navbar .nav-links.view5 .links .more-arrow4,
+  .navbar .nav-links.view6 .links .more-arrow5,
+  .navbar .nav-links.view7 .links .more-arrow6,
+  .navbar .nav-links.view8 .links .more-arrow7,
+  .navbar .nav-links.view9 .links .more-arrow8 {
+    transform: rotate(90deg);
+  }
+}
+
+@media (max-width: 370px) {
+  nav .navbar .nav-links {
+    max-width: 100%;
+  }
 }
