--- a/styles.css
+++ b/styles.css
@@ -1700,6 +1700,12 @@ nav .navbar .links li:hover .htmlCss-sub-menu8 {
   nav .navbar .links li .sub-menu .more .sub-menu{
     /* margin-left: 0px; */
   }
+  .navbar .search-box .input-box {
+    right: calc(100% - 24px);
+}
+.image-container img {
+  width: 49%;
+}
 }
 @media (min-width: 951px) and (max-width: 1250px) {
   .navbar .bx-menu {
@@ -1900,5 +1906,19 @@ nav .navbar .links li:hover .htmlCss-sub-menu8 {
   .navbar .nav-links.view8 .links .more-arrow7,
   .navbar .nav-links.view9 .links .more-arrow8 {
     transform: rotate(90deg);
+  }
+  .image-container img {
+    width: 49%;
+  }
+}
+
+
+@media (max-height: 650px) {
+  nav .navbar .links li .sub-menu {
+    line-height: 56px;
+  }
+  nav{
+    top: 56px;
+    height: 22px;
   }
 }
