--- a/styles.css
+++ b/styles.css
@@ -1914,11 +1914,28 @@ nav .navbar .links li:hover .htmlCss-sub-menu8 {
 
 
 @media (max-height: 650px) {
+  
   nav .navbar .links li .sub-menu {
-    line-height: 56px;
-  }
-  nav{
+    position: absolute;
     top: 56px;
-    height: 22px;
-  }
+    left: 0;
+    line-height: 24px;
+    background: #03b2b5;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 0 0 4px 4px;
+    display: none;
+    z-index: 2;
+    margin-left: -40px;
+}
+  nav {
+    position: fixed;
+    top: 22px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    height: 56px;
+    background: linear-gradient(45deg, #1c2b65, #03b2b5);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    z-index: 99;
+}
 }
