--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ nav .navbar .links li .sub-menu {
   margin-left: -40px;
 }
 
-nav .navbar .links li .sub-menu .more .sub-menu{
+nav .navbar .links li .sub-menu .more .sub-menu {
   margin-left: 0px;
 }
 
@@ -1496,7 +1496,6 @@ nav .navbar .links li:hover .htmlCss-sub-menu8 {
     box-shadow: none;
     display: none;
     margin-left: 0px;
-
   }
 
   nav .navbar .links li .sub-menu li {
@@ -1697,16 +1696,23 @@ nav .navbar .links li:hover .htmlCss-sub-menu8 {
   nav .navbar .links li .submenus {
     margin-left: -30px;
   }
-  nav .navbar .links li .sub-menu .more .sub-menu{
+  nav .navbar .links li .sub-menu .more .sub-menu {
     /* margin-left: 0px; */
   }
   .navbar .search-box .input-box {
     right: calc(100% - 24px);
+  }
+  .image-container img {
+    width: 49%;
+  }
 }
-.image-container img {
-  width: 49%;
+
+@media (min-width: 951px) and (max-width: 1500px) {
+  .slider-container {
+    height: 279px;
+  }
 }
-}
+
 @media (min-width: 951px) and (max-width: 1250px) {
   .navbar .bx-menu {
     display: block;
@@ -1742,7 +1748,7 @@ nav .navbar .links li:hover .htmlCss-sub-menu8 {
     align-items: center;
     justify-content: space-between;
   }
-  nav .navbar .links li .sub-menu .more .sub-menu{
+  nav .navbar .links li .sub-menu .more .sub-menu {
     margin-left: 0px !important;
   }
 
@@ -1911,7 +1917,6 @@ nav .navbar .links li:hover .htmlCss-sub-menu8 {
     width: 49%;
   }
 }
-
 
 @media (max-height: 600px) {
   
