--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ nav .navbar .links li .arrow {
 }
 
 nav .navbar .links li .sub-menu {
+  display: none;
   position: absolute;
   top: 70px;
   left: 0;
@@ -112,10 +113,29 @@ nav .navbar .links li .sub-menu {
   background: #03b2b5;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 0 0 4px 4px;
-  display: none;
   z-index: 2;
   margin-left: -40px;
 }
+
+.more span{
+  display: flex;
+}
+
+nav .navbar .links li .sub-menu li:hover {
+  background-color: #7dbec0; /* Light gray background on hover */
+}
+
+/* nav .navbar .links li .sub-menu li:hover > a {
+  color: #007bff; Blue color for hovered anchor
+} */
+
+/* Change color for hovered submenu items
+
+Ensure parent items (like 'Meter Manufacturing Plant') also show hover effect correctly
+nav .navbar .links li:hover > a {
+  color: #007bff; Blue color on hover for parent menu
+} */
+
 
 nav .navbar .links li .sub-menu .more .sub-menu {
   margin-left: 0px;
